<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Result"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="first"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="second"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnCalculateAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate ( + )" />

    <Button
        android:id="@+id/btnCalculateDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate ( / )" />

</LinearLayout>